# FraudShield

./: .env.example  .gitignore  README.md  mlflow.db  pyproject.toml  requirements.txt
client/: __init__.py  client.py  communicator.py  data_loader.py  train_local.py  trainer.py
data/: __init__.py  partitioner.py  prepare_dataset.py
model/: __init__.py  fraud_mlp.py  utils.py
scripts/: run_federation.py  setup_env.sh
server/: __init__.py  aggregation.py  evaluation.py  main.py  mlflow_logger.py  model_registry.py  round_manager.py  schemas.py
tests/: test_aggregation.py  test_data_loader.py  test_fl_client.py  test_model.py  test_model_registry.py  test_partition.py  test_server.py  test_trainer.py
