[project]
name = "fraudshield"
version = "0.1.0"
description = "Federated Learning platform with Differential Privacy for multi-institutional fraud detection"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Mohamed Firas Ben Khalifa" }]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: long-running tests (full training loops)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "ANN"]
ignore = ["ANN401"]  # allow typing.Any in **kwargs passthroughs

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
